// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointsCounter renders with a value of 2 digits 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#fff",
          "fontSize": 65,
          "fontWeight": "bold",
        },
        Object {
          "fontSize": 80,
        },
      ]
    }
  >
    20
  </Text>
</View>
`;

exports[`PointsCounter renders with a value of 4 digits 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#fff",
          "fontSize": 65,
          "fontWeight": "bold",
        },
        Object {
          "fontSize": 65,
        },
      ]
    }
  >
    8000
  </Text>
</View>
`;

exports[`PointsCounter renders with a value of 5 digits 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#fff",
          "fontSize": 65,
          "fontWeight": "bold",
        },
        Object {
          "fontSize": 50,
        },
      ]
    }
  >
    80000
  </Text>
</View>
`;

exports[`PointsCounter renders with no props  1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#fff",
          "fontSize": 65,
          "fontWeight": "bold",
        },
        Object {
          "fontSize": 65,
        },
      ]
    }
  />
</View>
`;
